--- a/scss/partials/mixins.scss
+++ b/scss/partials/mixins.scss
@@ -149,3 +149,10 @@
 		transform: skew(4deg) rotate(4deg);
 	}
 }
+@mixin filter-min-width($width) {
+  @media #{$medium-up} {
+    .f-dropdown ul {
+      min-width: $width;
+    }
+  }
+}
