--- a/shop/style.scss
+++ b/shop/style.scss
@@ -40,22 +40,34 @@ $kit-box-height: 429px;
 	}
 	.book-cover {
 		list-style:none;
-		padding:75px 60px 0 0;
+		padding:10px 60px 0 10px;
 		text-align:center;
 		margin:0;
 		max-height:400px;
+		position:absolute;
+		//top:15%;
+		width:90%;
+		@media #{$medium-up}{
+			position:relative;
+			//top:0;
+			padding-top:75px;
+			width:100%;
+		}
 		li {
 			display:inline-block;
-			padding:20px;
-			width:19%;
+			//padding:10px;
+			width:32%;
 			max-height:350px;
-			@media #{$small-only}{
-				width:49%;
+			@media #{$medium-up}{
+				width:19%;
+			}
+			@media #{$medium-only}{
+				padding:0;
 			}
 			img {
 				display:inline-block;
 				max-width:80%;
-				min-width:20px !important;
+				min-width:120px !important;
 				max-height:100%;
 				margin-bottom:20px;
 				border: 5px white solid;
@@ -90,6 +102,7 @@ $kit-box-height: 429px;
 	#store-feature { // Carousel
 		position:relative;
 		padding:0px 0px;
+		overflow:hidden;
 		width:100%;
 		height:100%;
 		//carousel edits
@@ -127,7 +140,10 @@ $kit-box-height: 429px;
 		}
 
 		.slick-slide{
-			top:30px;
+			top:85px;
+			@media #{$medium-up}{
+				top:30px;
+			}
 			a{
 				display:block;
 				width:100%;
@@ -137,32 +153,43 @@ $kit-box-height: 429px;
 				left:0;
 				z-index:2;
 			}
-			.domains {
-				top: 20px !important;
-			}
 		}
 		.slick-initialized .slick-slide {
 			overflow:hidden;
 			min-height:400px;
+			@media #{$medium-up}{
+				margin-top:70px;
+			}
 		}
 		.feature-covers {
 			padding-bottom:60px;
 			height:550px;
 			.feature-caption {
+				position:absolute;
+				bottom:0;
 				padding:0 35px;
 				h2 {
 					color:white;
 					text-align:left;
 					margin:0;
+					font-size:rem-calc(16);
 					&:before, &:after {
 						border:none;
 					}
 				}
 				h3 {
 					color:white;
-					font-size:rem-calc(18);
+					font-size:rem-calc(12);
 					text-align:left;
 					padding-right:60px;
+				}
+				@media #{$medium-up}{
+					h2 {
+						font-size:rem-calc(22);
+					}
+					h3 {
+						font-size:rem-calc(18);
+					}
 				}
 			}
 		}
@@ -211,7 +238,9 @@ $kit-box-height: 429px;
 				background-color: $light-grey;
 			}
 			#filters {
-				float:right;
+				.f-dropdown li {
+					width:105%;
+				}
 				li {
 					float:left;
 					& + li {
